--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "onoff":"^6.0.0"
+    "onoff":"^6.0.0",
+    "node-dht-sensor":"^0.4.3"
   }
 }
