--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "onoff":"^6.0.0",
-    "node-dht-sensor":"^0.4.3"
+    "node-dht-sensor":"^0.4.3",
+    "sqlite3":"5.0.0"
   }
 }
